<resources>
    <string name="app_name">MyPizzasMvi</string>
    <string name="blank_text"> </string>
    <string name="close_text">Fechar</string>
    <string name="attention_text">Atenção!</string>

    <!-- Login-->
    <string name="login_title">Entrar</string>
    <string name="hint_user">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="text_button_login">Entrar</string>

    <!-- List Pizza-->
    <string name="filter_hint">Procurar</string>
    <string name="text_choose_flavor">Escolha seu sabor</string>

    <!-- Pizza Details-->
    <string name="chose_size_pizza">Escolha o tamanho</string>
    <string name="text_size_p">P</string>
    <string name="text_size_m">M</string>
    <string name="text_size_g">G</string>
    <string name="text_buy_pizza">Comprar</string>
</resources>